Implement more Monte Carlo algorithms

--- a/5_Monte_Carlo.ipynb
+++ b/5_Monte_Carlo.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -170,19 +170,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## On-policy"
+    "## On-policy\n",
+    "\n",
+    "On-policy methods are RL methods where the policy that we try to optimize is the same policy that we use to explore. This implies that we always keep exploring.\n",
+    "\n",
+    "Here, we use an $\\epsilon$-greedy approach to make sure we always keep exploring."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### First-visit"
+    "### First-visit\n",
+    "\n",
+    "First-visit means that the value associated with a state is the mean return after the state was visited for the first time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -205,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -238,17 +244,8 @@
     "            if len(episode) == 0:\n",
     "                continue\n",
     "            \n",
-    "            returns = {}\n",
-    "            reward_after = 0\n",
-    "            \n",
-    "            for state, action, reward in reversed(episode):\n",
-    "                reward_after += reward\n",
-    "                returns[(state, action)] = reward_after\n",
-    "                \n",
-    "            for (state, action), ret in returns.items():\n",
-    "                self.returns[(state, action)].append(ret)\n",
-    "                self.Q[(state, action)] = mean(self.returns[(state, action)])\n",
-    "            \n",
+    "            self._calculate_returns(episode)\n",
+    "                            \n",
     "            states, _, _ = zip(*episode)\n",
     "            for state in set(states):\n",
     "                actions = self.env.get_possible_actions(state)\n",
@@ -261,7 +258,19 @@
     "                    self.policy[(state, action)] = self.epsilon / num_actions\n",
     "            \n",
     "                self.policy[(state, best_action)] += 1 - self.epsilon\n",
-    "            \n",
+    "    \n",
+    "    def _calculate_returns(self, episode):\n",
+    "        returns = {}\n",
+    "        reward_after = 0\n",
+    "\n",
+    "        for state, action, reward in reversed(episode):\n",
+    "            reward_after += reward\n",
+    "            returns[(state, action)] = reward_after\n",
+    "                \n",
+    "        for (state, action), ret in returns.items():\n",
+    "            self.returns[(state, action)].append(ret)\n",
+    "            self.Q[(state, action)] = mean(self.returns[(state, action)])\n",
+    "    \n",
     "    def _get_start_state(self):\n",
     "        return choice(self.env.get_states())"
    ]
@@ -275,218 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(12, 1, 0) 0\n",
-      "(12, 1, 1) 0\n",
-      "(12, 2, 0) 0\n",
-      "(12, 2, 1) 0\n",
-      "(12, 3, 0) 0\n",
-      "(12, 3, 1) 0\n",
-      "(12, 4, 0) 0\n",
-      "(12, 4, 1) 0\n",
-      "(12, 5, 0) 0\n",
-      "(12, 5, 1) 0\n",
-      "(12, 6, 0) 0\n",
-      "(12, 6, 1) 0\n",
-      "(12, 7, 0) 0\n",
-      "(12, 7, 1) 0\n",
-      "(12, 8, 0) 0\n",
-      "(12, 8, 1) 0\n",
-      "(12, 9, 0) 0\n",
-      "(12, 9, 1) 0\n",
-      "(12, 10, 0) 0\n",
-      "(12, 10, 1) 0\n",
-      "(13, 1, 0) 0\n",
-      "(13, 1, 1) 0\n",
-      "(13, 2, 0) 0\n",
-      "(13, 2, 1) 0\n",
-      "(13, 3, 0) 0\n",
-      "(13, 3, 1) 0\n",
-      "(13, 4, 0) 0\n",
-      "(13, 4, 1) 0\n",
-      "(13, 5, 0) 0\n",
-      "(13, 5, 1) 0\n",
-      "(13, 6, 0) 0\n",
-      "(13, 6, 1) 0\n",
-      "(13, 7, 0) 0\n",
-      "(13, 7, 1) 0\n",
-      "(13, 8, 0) 0\n",
-      "(13, 8, 1) 0\n",
-      "(13, 9, 0) 0\n",
-      "(13, 9, 1) 0\n",
-      "(13, 10, 0) 0\n",
-      "(13, 10, 1) 0\n",
-      "(14, 1, 0) 0\n",
-      "(14, 1, 1) 0\n",
-      "(14, 2, 0) 0\n",
-      "(14, 2, 1) 0\n",
-      "(14, 3, 0) 0\n",
-      "(14, 3, 1) 0\n",
-      "(14, 4, 0) 0\n",
-      "(14, 4, 1) 0\n",
-      "(14, 5, 0) 0\n",
-      "(14, 5, 1) 0\n",
-      "(14, 6, 0) 0\n",
-      "(14, 6, 1) 0\n",
-      "(14, 7, 0) 1\n",
-      "(14, 7, 1) 0\n",
-      "(14, 8, 0) 0\n",
-      "(14, 8, 1) 0\n",
-      "(14, 9, 0) 0\n",
-      "(14, 9, 1) 0\n",
-      "(14, 10, 0) 0\n",
-      "(14, 10, 1) 0\n",
-      "(15, 1, 0) 0\n",
-      "(15, 1, 1) 0\n",
-      "(15, 2, 0) 0\n",
-      "(15, 2, 1) 0\n",
-      "(15, 3, 0) 0\n",
-      "(15, 3, 1) 0\n",
-      "(15, 4, 0) 0\n",
-      "(15, 4, 1) 0\n",
-      "(15, 5, 0) 0\n",
-      "(15, 5, 1) 0\n",
-      "(15, 6, 0) 1\n",
-      "(15, 6, 1) 0\n",
-      "(15, 7, 0) 0\n",
-      "(15, 7, 1) 0\n",
-      "(15, 8, 0) 0\n",
-      "(15, 8, 1) 0\n",
-      "(15, 9, 0) 0\n",
-      "(15, 9, 1) 0\n",
-      "(15, 10, 0) 0\n",
-      "(15, 10, 1) 0\n",
-      "(16, 1, 0) 0\n",
-      "(16, 1, 1) 0\n",
-      "(16, 2, 0) 1\n",
-      "(16, 2, 1) 0\n",
-      "(16, 3, 0) 1\n",
-      "(16, 3, 1) 0\n",
-      "(16, 4, 0) 1\n",
-      "(16, 4, 1) 0\n",
-      "(16, 5, 0) 1\n",
-      "(16, 5, 1) 0\n",
-      "(16, 6, 0) 1\n",
-      "(16, 6, 1) 0\n",
-      "(16, 7, 0) 1\n",
-      "(16, 7, 1) 0\n",
-      "(16, 8, 0) 1\n",
-      "(16, 8, 1) 0\n",
-      "(16, 9, 0) 0\n",
-      "(16, 9, 1) 0\n",
-      "(16, 10, 0) 0\n",
-      "(16, 10, 1) 0\n",
-      "(17, 1, 0) 1\n",
-      "(17, 1, 1) 0\n",
-      "(17, 2, 0) 1\n",
-      "(17, 2, 1) 0\n",
-      "(17, 3, 0) 1\n",
-      "(17, 3, 1) 0\n",
-      "(17, 4, 0) 1\n",
-      "(17, 4, 1) 0\n",
-      "(17, 5, 0) 1\n",
-      "(17, 5, 1) 0\n",
-      "(17, 6, 0) 1\n",
-      "(17, 6, 1) 0\n",
-      "(17, 7, 0) 1\n",
-      "(17, 7, 1) 0\n",
-      "(17, 8, 0) 1\n",
-      "(17, 8, 1) 0\n",
-      "(17, 9, 0) 1\n",
-      "(17, 9, 1) 0\n",
-      "(17, 10, 0) 0\n",
-      "(17, 10, 1) 0\n",
-      "(18, 1, 0) 1\n",
-      "(18, 1, 1) 0\n",
-      "(18, 2, 0) 1\n",
-      "(18, 2, 1) 1\n",
-      "(18, 3, 0) 1\n",
-      "(18, 3, 1) 1\n",
-      "(18, 4, 0) 1\n",
-      "(18, 4, 1) 0\n",
-      "(18, 5, 0) 1\n",
-      "(18, 5, 1) 1\n",
-      "(18, 6, 0) 1\n",
-      "(18, 6, 1) 1\n",
-      "(18, 7, 0) 1\n",
-      "(18, 7, 1) 0\n",
-      "(18, 8, 0) 1\n",
-      "(18, 8, 1) 1\n",
-      "(18, 9, 0) 1\n",
-      "(18, 9, 1) 1\n",
-      "(18, 10, 0) 1\n",
-      "(18, 10, 1) 0\n",
-      "(19, 1, 0) 1\n",
-      "(19, 1, 1) 1\n",
-      "(19, 2, 0) 1\n",
-      "(19, 2, 1) 1\n",
-      "(19, 3, 0) 1\n",
-      "(19, 3, 1) 1\n",
-      "(19, 4, 0) 1\n",
-      "(19, 4, 1) 1\n",
-      "(19, 5, 0) 1\n",
-      "(19, 5, 1) 1\n",
-      "(19, 6, 0) 1\n",
-      "(19, 6, 1) 1\n",
-      "(19, 7, 0) 1\n",
-      "(19, 7, 1) 1\n",
-      "(19, 8, 0) 1\n",
-      "(19, 8, 1) 1\n",
-      "(19, 9, 0) 1\n",
-      "(19, 9, 1) 1\n",
-      "(19, 10, 0) 1\n",
-      "(19, 10, 1) 1\n",
-      "(20, 1, 0) 1\n",
-      "(20, 1, 1) 1\n",
-      "(20, 2, 0) 1\n",
-      "(20, 2, 1) 1\n",
-      "(20, 3, 0) 1\n",
-      "(20, 3, 1) 1\n",
-      "(20, 4, 0) 1\n",
-      "(20, 4, 1) 1\n",
-      "(20, 5, 0) 1\n",
-      "(20, 5, 1) 1\n",
-      "(20, 6, 0) 1\n",
-      "(20, 6, 1) 1\n",
-      "(20, 7, 0) 1\n",
-      "(20, 7, 1) 1\n",
-      "(20, 8, 0) 1\n",
-      "(20, 8, 1) 1\n",
-      "(20, 9, 0) 1\n",
-      "(20, 9, 1) 1\n",
-      "(20, 10, 0) 1\n",
-      "(20, 10, 1) 1\n",
-      "(21, 1, 0) 1\n",
-      "(21, 1, 1) 1\n",
-      "(21, 2, 0) 1\n",
-      "(21, 2, 1) 1\n",
-      "(21, 3, 0) 1\n",
-      "(21, 3, 1) 1\n",
-      "(21, 4, 0) 1\n",
-      "(21, 4, 1) 1\n",
-      "(21, 5, 0) 1\n",
-      "(21, 5, 1) 1\n",
-      "(21, 6, 0) 1\n",
-      "(21, 6, 1) 1\n",
-      "(21, 7, 0) 1\n",
-      "(21, 7, 1) 1\n",
-      "(21, 8, 0) 1\n",
-      "(21, 8, 1) 1\n",
-      "(21, 9, 0) 1\n",
-      "(21, 9, 1) 1\n",
-      "(21, 10, 0) 1\n",
-      "(21, 10, 1) 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = BlackJack()\n",
     "agent = OnPolicyFirstVisitMonteCarloAgent(env)\n",
@@ -500,14 +302,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Every-visit"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Off-policy"
+    "### Every-visit\n",
+    "\n",
+    "First-visit means that the value associated with a state is the mean return after all visits to that state."
    ]
   },
   {
@@ -517,7 +314,139 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class OnPolicyEveryVisitMonteCarloAgent(OnPolicyFirstVisitMonteCarloAgent):\n",
+    "    def _calculate_returns(self, episode):\n",
+    "        returns = {}\n",
+    "        reward_after = 0\n",
+    "\n",
+    "        for state, action, reward in reversed(episode):\n",
+    "            reward_after += reward\n",
+    "            returns[(state, action)] = reward_after\n",
+    "            self.returns[(state, action)].append(reward_after)\n",
+    "                \n",
+    "        for (state, action), ret in returns.items():\n",
+    "            self.Q[(state, action)] = mean(self.returns[(state, action)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, this method yields the same results as the first-visit method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "env = BlackJack()\n",
+    "agent = OnPolicyEveryVisitMonteCarloAgent(env)\n",
+    "\n",
+    "agent.learn(num_samples=500000)\n",
+    "\n",
+    "agent.print_policy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Off-policy\n",
+    "\n",
+    "The on-policy approach has a fundamental flaw: We try to optimize a policy that also needs to keep exploring, which means it can never really be optimal.\n",
+    "\n",
+    "The off-policy approach tries to fix this by using a different policy just for exploration. Importance sampling is then used to make sure the results are weighted correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "class OffPolicyEveryVisitMonteCarloAgent(OnPolicyEveryVisitMonteCarloAgent):\n",
+    "    def learn(self, num_samples):\n",
+    "        self._init_u_policy()\n",
+    "        \n",
+    "        self.C = defaultdict(float)\n",
+    "        \n",
+    "        for _ in range(num_samples):\n",
+    "            episode = self.env.sample(self.u_policy, self._get_start_state())\n",
+    "            \n",
+    "            if len(episode) == 0:\n",
+    "                continue\n",
+    "                \n",
+    "            G = 0.\n",
+    "            W = 1.\n",
+    "            \n",
+    "            for i in reversed(range(len(episode) - 1)):\n",
+    "                next_state, next_action, next_reward = episode[i + 1]\n",
+    "                state, action, reward = episode[i]\n",
+    "                \n",
+    "                G += next_reward\n",
+    "                self.C[(state, action)] += W\n",
+    "                self.Q[(state, action)] += W / self.C[(state, action)] * (G - self.Q[(state, action)])\n",
+    "                \n",
+    "                actions = self.env.get_possible_actions(state)                \n",
+    "                QA = { action: self.Q[(state, possible_action)] for possible_action in actions }\n",
+    "                best_action = max(QA.items(), key=itemgetter(1))[0]\n",
+    "                \n",
+    "                for possible_action in actions:\n",
+    "                    self.policy[(state, possible_action)] = 0\n",
+    "            \n",
+    "                self.policy[(state, best_action)] = 1\n",
+    "                \n",
+    "                if action != best_action:\n",
+    "                    break\n",
+    "                    \n",
+    "                W *= 1. / self.u_policy[(state, action)]\n",
+    "    \n",
+    "    def _init_u_policy(self):\n",
+    "        self.u_policy = {}\n",
+    "        \n",
+    "        for state in self.env.get_states():\n",
+    "            actions = self.env.get_possible_actions(state)\n",
+    "            num_actions = len(actions)\n",
+    "            \n",
+    "            for action in actions:\n",
+    "                self.u_policy[(state, action)] = 1. / num_actions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "env = BlackJack()\n",
+    "agent = OffPolicyEveryVisitMonteCarloAgent(env)\n",
+    "\n",
+    "agent.learn(num_samples=500000)\n",
+    "\n",
+    "agent.print_policy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "agent.Q"
+   ]
   }
  ],
  "metadata": {
