Directly evaluate the performance of Q-Learning vs (expected) Sarsa

--- a/6_Temporal_Difference_Learning.ipynb
+++ b/6_Temporal_Difference_Learning.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 228,
    "metadata": {
     "collapsed": false
    },
@@ -396,13 +396,78 @@
        "[0, 0, 1, 1, 1, 0]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "wind"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll save this policy as `best_policy` to be able to check how fast the different algorithms find that policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_policy = sarsa_agent.policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def evaluate_agent(RLAgent):\n",
+    "    results = []\n",
+    "\n",
+    "    for _ in range(500):\n",
+    "        other_sarsa_agent = RLAgent(env)\n",
+    "\n",
+    "        i = 0\n",
+    "\n",
+    "        while other_sarsa_agent.policy != best_policy:\n",
+    "            other_sarsa_agent.learn(num_samples=1, initial_state=(0, 0))\n",
+    "            i += 1\n",
+    "\n",
+    "        results.append(i)\n",
+    "\n",
+    "    return np.mean(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "181.364"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_agent(SarsaAgent)"
    ]
   },
   {
@@ -449,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This agent learns the same policy as the Sarsa Agent, but interestingly it does so much faster."
+    "As expected, this agent learns the same policy as the Sarsa Agent."
    ]
   },
   {
@@ -471,6 +536,28 @@
    ],
    "source": [
     "draw_policy(q_agent, 3, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "381.91800000000001"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_agent(QLearningAgent)"
    ]
   },
   {
@@ -546,6 +633,28 @@
    ],
    "source": [
     "draw_policy(expected_sarsa_agent, 3, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210.83199999999999"
+      ]
+     },
+     "execution_count": 261,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_agent(ExpectedSarsaAgent)"
    ]
   }
  ],
